test-results-final.txt

> glassy-dash@1.1.6 test:e2e
> playwright test

[2m[WebServer] [22m
[2m[WebServer] [22m> glassy-dash@1.1.6 dev
[2m[WebServer] [22m> concurrently -k -n WEB,API,SCHEDULER -c auto "vite" "npm:api" "npm:scheduler"
[2m[WebServer] [22m
[2m[WebServer] [22m[33m[API][39m [2m[WebServer] [22m
[2m[WebServer] [22m[33m[API][39m > glassy-dash@1.1.6 api
[2m[WebServer] [22m[33m[API][39m > cross-env NODE_ENV=development nodemon server/index.js
[2m[WebServer] [22m[33m[API][39m 
[2m[WebServer] [22m[92m[SCHEDULER][39m 
[2m[WebServer] [22m[92m[SCHEDULER][39m > glassy-dash@1.1.6 scheduler
[2m[WebServer] [22m[92m[SCHEDULER][39m > node server/scheduler.js start
[2m[WebServer] [22m[92m[SCHEDULER][39m 
[2m[WebServer] [22m[92m[SCHEDULER][39m ðŸ“… Starting task scheduler...
[2m[WebServer] [22m[92m[SCHEDULER][39m   âœ… Daily backup scheduled (2 AM)
[2m[WebServer] [22m[92m[SCHEDULER][39m   âœ… Hourly log check scheduled (every hour)
[2m[WebServer] [22m[92m[SCHEDULER][39m   âœ… Weekly cleanup scheduled (Sunday 3 AM)
[2m[WebServer] [22m[92m[SCHEDULER][39m   âœ… Daily health check scheduled (6 AM)
[2m[WebServer] [22m[92m[SCHEDULER][39m âœ… All scheduled tasks started
[2m[WebServer] [22m[92m[SCHEDULER][39m 
[2m[WebServer] [22m[92m[SCHEDULER][39m Press Ctrl+C to stop scheduler
[2m[WebServer] [22m[92m[SCHEDULER][39m 
[2m[WebServer] [22m[33m[API][39m [2m[WebServer] [22m[33m[nodemon] 3.1.10[39m
[2m[WebServer] [22m[33m[API][39m [33m[nodemon] to restart at any time, enter `rs`[39m
[2m[WebServer] [22m[33m[API][39m [33m[nodemon] watching path(s): *.*[39m
[2m[WebServer] [22m[33m[API][39m [33m[nodemon] watching extensions: js,mjs,cjs,json[39m
[2m[WebServer] [22m[33m[API][39m [32m[nodemon] starting `node server/index.js`[39m
[2m[WebServer] [22m[33m[API][39m [dotenv@17.2.1] injecting env (5) from .env -- tip: âš™ï¸  enable debug logging with { debug: true }
[2m[WebServer] [22m[33m[API][39m âœ“ Monitoring routes mounted at /api/monitoring
[2m[WebServer] [22m[33m[API][39m âœ“ YouTube routes mounted at /api/youtube
[2m[WebServer] [22m[33m[API][39m âœ“ Music routes mounted at /api/music
[2m[WebServer] [22m[33m[API][39m âœ“ Icon routes mounted at /api/icons
[2m[WebServer] [22m[33m[API][39m [dotenv@17.2.1] injecting env (0) from .env -- tip: âš™ï¸  suppress all logs with { quiet: true }
[2m[WebServer] [22m[33m[API][39m âœ“ Bug report routes mounted at /api/bug-reports
[2m[WebServer] [22m[33m[API][39m âœ“ AI routes mounted at /api/ai
[2m[WebServer] [22m[33m[API][39m âœ“ Logging module initialized
[2m[WebServer] [22m[33m[API][39m âœ“ Logging routes mounted at /api/logs
[2m[WebServer] [22m[33m[API][39m ---------------------------------------------------
[2m[WebServer] [22m[33m[API][39m >> DATABASE_PATH env: [90mundefined[39m
[2m[WebServer] [22m[33m[API][39m >> SELECTED DB FILE: /home/pozicontrol/projects/glassy-dash/GLASSYDASH/data/notes.db
[2m[WebServer] [22m[33m[API][39m ---------------------------------------------------
[2m[WebServer] [22m[33m[API][39m [Migrations] Running migrations...
[2m[WebServer] [22m[33m[API][39m [Migrations] âœ“ Skipping add_announcements (already executed)
[2m[WebServer] [22m[33m[API][39m [Migrations] âœ“ Skipping add_collaboration (already executed)
[2m[WebServer] [22m[33m[API][39m [Migrations] âœ“ Skipping add_user_providers (already executed)
[2m[WebServer] [22m[33m[API][39m [Migrations] âœ“ All migrations completed
[2m[WebServer] [22m[33m[API][39m Admin emails configured: admin
[2m[WebServer] [22m[33m[API][39m Promoted existing user admin to admin
[2m[WebServer] [22m[33m[API][39m âœ“ Database initialization complete
[2m[WebServer] [22m[33m[API][39m [AI Providers] Initializing...
[2m[WebServer] [22m[33m[API][39m [Provider Router] Initialized with default provider: Gemini
[2m[WebServer] [22m[33m[API][39m [Provider Router] Registered provider: gemini
[2m[WebServer] [22m[33m[API][39m [Provider Router] Registered provider: zai
[2m[WebServer] [22m[33m[API][39m [Provider Router] Updated task mapping for image-generation: zai, gemini
[2m[WebServer] [22m[33m[API][39m [Gemini Provider] Initialized with model: gemini-2.5-flash
[2m[WebServer] [22m[33m[API][39m [Provider Router] Added gemini provider
[2m[WebServer] [22m[33m[API][39m [AI Providers] âœ“ Gemini provider loaded
[2m[WebServer] [22m[33m[API][39m [AI Providers] âœ“ Initialization complete
[2m[WebServer] [22m[33m[API][39m [AI Providers] âš  No ZAI_API_KEY found in environment. User can add their own key through settings.
[2m[WebServer] [22m[33m[API][39m API listening on http://0.0.0.0:8080  (env=development)
[2m[WebServer] [22m[36m[WEB][39m 
[2m[WebServer] [22m[36m[WEB][39m   [32m[1mVITE[22m v7.3.1[39m  [2mready in [0m[1m210[22m[2m[0m ms[22m
[2m[WebServer] [22m[36m[WEB][39m 
[2m[WebServer] [22m[36m[WEB][39m   [32mâžœ[39m  [1mLocal[22m:   [36mhttp://localhost:[1m5173[22m/[39m
[2m[WebServer] [22m[36m[WEB][39m   [32mâžœ[39m  [1mNetwork[22m: [36mhttp://10.255.255.254:[1m5173[22m/[39m
[2m[WebServer] [22m[36m[WEB][39m   [32mâžœ[39m  [1mNetwork[22m: [36mhttp://172.27.22.150:[1m5173[22m/[39m
[2m[WebServer] [22m[36m[WEB][39m   [32mâžœ[39m  [1mNetwork[22m: [36mhttp://172.20.0.1:[1m5173[22m/[39m
[2m[WebServer] [22m[36m[WEB][39m   [32mâžœ[39m  [1mNetwork[22m: [36mhttp://172.17.0.1:[1m5173[22m/[39m
[2m[WebServer] [22m[36m[WEB][39m   [32mâžœ[39m  [1mNetwork[22m: [36mhttp://172.18.0.1:[1m5173[22m/[39m
[2m[WebServer] [22m[36m[WEB][39m   [32mâžœ[39m  [1mNetwork[22m: [36mhttp://172.19.0.1:[1m5173[22m/[39m
SyntaxError: /home/pozicontrol/projects/glassy-dash/GLASSYDASH/tests/e2e/voice-studio.spec.js: Unexpected token, expected "," (28:2)

  26 |     const errorToast = page.locator('.fixed').filter({ hasText: /permission|microphone|error/i })
  27 |     await expect(errorToast.or(page.locator('button svg.lucide-mic')).toBeVisible()
> 28 |   })
     |   ^
  29 |
  30 |   test('should toggle audio editor when viewing a recording', async ({ page }) => {
  31 |     // Need to have a recording state.

   at voice-studio.spec.js:28

  26 |     const errorToast = page.locator('.fixed').filter({ hasText: /permission|microphone|error/i })
  27 |     await expect(errorToast.or(page.locator('button svg.lucide-mic')).toBeVisible()
> 28 |   })
     |  ^
  29 |
  30 |   test('should toggle audio editor when viewing a recording', async ({ page }) => {
  31 |     // Need to have a recording state.


To open last HTML report run:
[36m[39m
[36m  npx playwright show-report[39m
[36m[39m
